# amber

./: .clang-tidy  .dockerignore  .gitignore  2.0_STATUS.md  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  main.cpp
.github/workflows/: build.yml  preview.yml
dialogs/: aboutdialog.cpp  advancedvideodialog.cpp  demonotice.cpp  exportdialog.cpp  preferencesdialog.cpp
docs/: 2.0-spec.md  prerequisites-fedora.md
effects/: effect.cpp  effectfield.cpp
effects/internal/: frei0reffect.cpp  frei0reffect.h  timecodeeffect.cpp  vsthost.cpp  yuv2rgb.frag
global/: config.cpp  config.h  global.cpp
packaging/linux/: PKGBUILD  appimage.dockerfile  control.in  deb.dockerfile  debian.dockerfile  dev.dockerfile  org.ambervideoeditor.Amber.appdata.xml  org.ambervideoeditor.Amber.desktop  org.ambervideoeditor.Amber.xml  ubuntu.dockerfile
packaging/windows/: cross-compile.dockerfile  resources.rc  version.h  version.h.in
packaging/windows/nsis/: amber.nsi  olive.nsi
panels/: effectcontrols.cpp  grapheditor.cpp  timeline.cpp
patches/: apply.sh  changes.patch
project/: footage.cpp  loadthread.cpp  previewgenerator.cpp  previewgenerator.h  proxygenerator.cpp
rendering/: audio.cpp  audio.h  cacher.cpp  cacher.h  exportthread.cpp  exportthread.h  renderfunctions.cpp  renderfunctions.h
src/: CMakeLists.txt  main.cpp
src/cmake/: FindFFMPEG.cmake
src/core/: CMakeLists.txt  appcontext.cpp  appcontext.h  audio.cpp  audio.h  blur.cpp  blur.h  colorlabel.cpp  colorlabel.h  displaytype.h  guide.h  keyframe.h  marker.h  math.cpp  math.h  path.cpp  path.h  selection.h  style.h
src/dialogs/: aboutdialog.cpp  actionsearch.cpp  actionsearch.h  advancedvideodialog.cpp  advancedvideodialog.h  autocutsilencedialog.cpp  autocutsilencedialog.h  clippropertiesdialog.cpp  clippropertiesdialog.h  debugdialog.cpp  debugdialog.h  demonotice.cpp  demonotice.h  exportdialog.cpp  exportdialog.h  exportsavepresetdialog.cpp  exportsavepresetdialog.h  footagerelinkdialog.cpp  footagerelinkdialog.h  keyframepropertiesdialog.cpp  keyframepropertiesdialog.h  loaddialog.cpp  loaddialog.h  markerpropertiesdialog.cpp  markerpropertiesdialog.h  mediapropertiesdialog.cpp  mediapropertiesdialog.h  newsequencedialog.cpp  newsequencedialog.h  preferencesdialog.cpp  preferencesdialog.h  proxydialog.cpp  proxydialog.h  replaceclipmediadialog.cpp  replaceclipmediadialog.h  speeddialog.cpp  speeddialog.h  texteditdialog.cpp  texteditdialog.h
src/effects/: effect.cpp  effect.h  effectfield.cpp  effectfield.h  effectgizmo.cpp  effectgizmo.h  effectloaders.cpp  effectloaders.h  effectrow.cpp  effectrow.h  keyframe.cpp  keyframe.h  transition.cpp  transition.h
src/engine/: CMakeLists.txt  cacher.cpp  cacher.h  cacher_audio.cpp  cacher_video.cpp  clip.cpp  clip.h  sequence.cpp  sequence.h  sequence_fwd.h
src/exportpresets/: Audio MP3  ProRes 422  WebM VP9  YouTube 1080p H264  YouTube 4K H265
src/global/: config.cpp  config.h  debug.cpp  global.cpp  global.h  math.cpp  math.h  path.cpp  projectio.cpp  projectio.h
src/icons/: icons.qrc
src/panels/: effectcontrols.cpp  effectcontrols.h  grapheditor.cpp  grapheditor.h  panels.cpp  panels.h  project.cpp  project.h  timeline.cpp  timeline.h  timeline_clipboard.cpp  timeline_layout.cpp  timeline_layout.h  timeline_splitting.cpp  timeline_ui.cpp  undohistorypanel.cpp  undohistorypanel.h  viewer.cpp  viewer.h
src/project/: clipboard.cpp  clipboard.h  clipboard_serializer.cpp  clipboard_serializer.h  footage.cpp  footage.h  loadthread.cpp  loadthread.h  media.cpp  media.h  previewgenerator.cpp  previewgenerator.h  projectelements.h  projectfilter.cpp  projectfilter.h  projectmodel.cpp  projectmodel.h  proxygenerator.cpp  proxygenerator.h  sourcescommon.cpp  sourcescommon.h
src/rendering/: audio.cpp  audio.h  audio_ui.cpp  audio_ui.h  cacher.cpp  cacher.h  cacher_audio.cpp  cacher_video.cpp  clipqueue.cpp  exportthread.cpp  exportthread.h  framebufferobject.cpp  framebufferobject.h  matrixutil.h  quadbuffer.cpp  quadbuffer.h  recordingtap.cpp  recordingtap.h  renderfunctions.cpp  renderfunctions.h  renderthread.cpp  renderthread.h
src/tests/: CMakeLists.txt  test_appcontext_stub.h  test_audio.cpp  test_core_headers.cpp  test_effects.cpp  test_effects_gpu.cpp  test_engine.cpp  test_math.cpp  test_path.cpp  test_projectio.cpp  test_recordingtap.cpp  test_render_harness.cpp  test_render_harness.h  test_rendering.cpp  test_rhi_smoke.cpp  test_srt.cpp  test_timeline_layout.cpp  test_ui_stubs.cpp
src/tests/fixtures/: t2_nv12_input.mkv
src/timeline/: clip.cpp  clip.h  guide.h  marker.cpp  marker.h  mediaimportdata.cpp  mediaimportdata.h  sequence.cpp  sequence.h
src/ts/: amber_ar.ts  amber_bs.ts  amber_cs.ts  amber_de.ts  amber_es.ts  amber_fr.ts  amber_id.ts  amber_it.ts  amber_pt-BR.ts  amber_ru.ts  amber_sr.ts  amber_tr.ts  amber_uk.ts  amber_zh-CN.ts  amber_zh-TW.ts
src/ui/: appcontextimpl.cpp  appcontextimpl.h  audiomonitor.cpp  audiomonitor.h  blur.cpp  blur.h  checkbox_command.cpp  checkbox_command.h  clickablelabel.h  collapsiblewidget.cpp  collapsiblewidget.h  colorbutton.cpp  colorlabel.cpp  colorlabel.h  columnedgridlayout.cpp  columnedgridlayout.h  comboboxex.h  cursors.cpp  cursors.h  effectui.cpp  effectui.h  embeddedfilechooser.cpp  embeddedfilechooser.h  flowlayout.cpp  flowlayout.h  focusfilter.cpp  focusfilter.h  fontcombobox.cpp  graphview.cpp  graphview.h  icons.cpp  icons.h  keyframedrawing.cpp  keyframenavigator.cpp  keyframenavigator.h  keyframeview.cpp  keyframeview.h  labelslider.cpp  labelslider.h  mainwindow.cpp  (+38 more)
src/undo/: comboaction.cpp  undo_clip.cpp  undo_clip.h  undo_effect.cpp  undo_effect.h  undo_generic.cpp  undo_generic.h  undo_guide.cpp  undo_guide.h  undo_media.cpp  undo_media.h  undo_timeline.cpp  undo_timeline.h  undoactions.h
timeline/: clip.cpp
ts/: olive_fr.ts
ui/: clickablelabel.h  flowlayout.cpp  graphview.cpp  keyframenavigator.cpp  keyframeview.cpp  mainwindow.cpp  menuhelper.cpp  resizablescrollbar.cpp  sourcetable.cpp  timelineheader.cpp  timelinewidget.cpp  viewerwidget.cpp  viewerwindow.cpp
(+141 files in other folders)
